Closed
Bug 387380
Opened 18 years ago
Closed 18 years ago
No visible caret when caret browsing
Categories
(Core :: DOM: Editor, defect)
Core
DOM: Editor
Tracking
()
RESOLVED
FIXED
mozilla1.9alpha8
People
(Reporter: smontagu, Assigned: peterv)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
9.52 KB,
patch
|
smaug
:
review+
jst
:
superreview+
dbaron
:
approval1.9+
|
Details | Diff | Splinter Review |
In caret browsing mode, there is no visible caret on the page. Apart from that, caret browsing still works: when pressing the arrow keys with shift or control, text is selected.
Regression range: 2007-06-27-05 works; 2007-06-28-04 has the bug. Regression from bug 237964?
| Assignee | ||
Updated•18 years ago
|
Assignee: nobody → peterv
Flags: blocking1.9?
OS: Linux → All
Hardware: PC → All
Target Milestone: --- → mozilla1.9beta1
Flags: blocking1.9? → blocking1.9+
| Assignee | ||
Comment 4•18 years ago
|
||
Attachment #272992 -
Flags: superreview?(jst)
Attachment #272992 -
Flags: review?
| Assignee | ||
Updated•18 years ago
|
Attachment #272992 -
Flags: review? → review?(Olli.Pettay)
| Assignee | ||
Comment 5•18 years ago
|
||
I'm going to be away for two weeks, so I'd appreciate it if someone could check this in when it's reviewed.
Status: NEW → ASSIGNED
Comment 6•18 years ago
|
||
Could you upload a -u8p patch?
The comments in nsICaret.h don't quite make sense.
(I can check this in)
Comment 7•18 years ago
|
||
Comment on attachment 272992 [details] [diff] [review]
v1
>+ /**
>+ * Sets whether the caret should only be visible in nodes that do are not
>+ * user-modify: read-only, or whether it should be visible in all nodes.
>+ *
>+ * @param aIgnoreReadWrite PR_TRUE to have the cursor visible in all nodes,
>+ * PR_FALSE to have it visible in all nodes except
>+ * those with user-modify: read-only
>+ */
>+ virtual void SetIgnoreUserModify(PRBool aIgnoreUserModify) = 0;
The comment should be probably:
" * Sets whether the caret should only be visible in nodes that are not
* user-modify: read-only, or whether it should be visible in all nodes.
*
* @param aIgnoreUserModify PR_TRUE to have the cursor visible in all nodes,
* PR_FALSE to have it visible in all nodes except
* those with user-modify: read-only
"
Attachment #272992 -
Flags: review?(Olli.Pettay) → review+
Updated•18 years ago
|
Attachment #272992 -
Flags: superreview?(jst) → superreview+
Updated•18 years ago
|
Attachment #272992 -
Flags: approval1.9?
Could you comment about the risk of this patch?
Comment 9•18 years ago
|
||
Peterv should be back soon, hopefully he can comment on that.
Comment on attachment 272992 [details] [diff] [review]
v1
Actually, this is blocking+, so no need for approval.
Attachment #272992 -
Flags: approval1.9? → approval1.9+
| Assignee | ||
Updated•18 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Comment 11•18 years ago
|
||
Does this fix cause this trouble?
https://bugzilla.mozilla.org/show_bug.cgi?id=391819
You need to log in
before you can comment on or make changes to this bug.
Description
•