Fix for bug 387380 (No visible caret when caret browsing). r=smaug, sr=jst, a=dbaron.